--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal CV for Helge Holm",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/forever/bin/forever -w server.js"
   },
   "author": "helge.holm@gmail.com",
   "license": "ISC",
