--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "forever": "^0.15.1",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "randy": "^1.5.1"
   }
 }
